# vimeo-rs

./: Cargo.toml  rustfmt.toml
examples/: vimeo-oauth.rs
src/: client.rs  lib.rs  main.rs  service.rs  user.rs  users.rs  videos.rs  vimeo.rs
