[package]
name = "vimeo-rs"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Fork oauth2 and fix dependency duplications. Use fork instead.

[dependencies]
oauth2 = { version = "3.0.0-alpha.9", features = ["reqwest-010"], default-features = false }
url = "2.1.1"
# TODO: Is this one really necessary? As a library we probably don't need to execute an async runtime.
tokio = "0.2.19"
reqwest = "0.10"