[package]
name = "vimeo-rs"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Fork oauth2 and fix dependency duplications. Use fork instead.

[dependencies]
oauth2 = { version = "3.0.0-alpha.9", features = ["reqwest-010"], default-features = false }
url = "2.1.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0"
